--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
+
 {
   "name": "todo-app",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build":"npm install --prefix backend && npm install --prefix frontend && npm install @vitejs/plugin-react --prefix frontend && npm run build --prefix frontend",
-    "start":"npm run start --prefix backend"
+    "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
+    "start":  "npm run start --prefix backend"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/TienIsPoggers/Todo-app.git"
+    "url": "git+https://github.com/TienIsPoggers/Test-Note.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/TienIsPoggers/Todo-app/issues"
+    "url": "https://github.com/TienIsPoggers/Test-Note/issues"
   },
-  "homepage": "https://github.com/TienIsPoggers/Todo-app#readme",
+  "homepage": "https://github.com/TienIsPoggers/Test-Note#readme",
   "description": ""
 }
